--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ra_hoc_time",
   "version": "0.1.0",
   "private": true,
+  "repository": "https://github.com/Elena-S04/ra_hoc_time.git",
   "homepage": "https://elena-s04.github.io/ra_hoc_time",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
